// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server > GET /v2/quote > applies price impact to DCA quote 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0080000000025002",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "8000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
  {
    "dcaParams": {
      "chunkIntervalBlocks": 2,
      "numberOfChunks": 4,
    },
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "99020000",
    "estimatedDurationSeconds": 168,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 48,
    },
    "estimatedPrice": "99.02792100000247569803",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "99119",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "7921",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "DCA",
  },
]
`;

exports[`server > GET /v2/quote > does not return recommendedLivePriceSlippageTolerancePercent for unavailable asset pair 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "FLIP",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "FLIP",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "FLIP",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > does not throw if totalLiquidity is higher than egressAmount 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > excludes the ingress fee for vault swaps 1`] = `
[
  {
    "depositAmount": "100000000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000000000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "0.01",
    "includedFees": [
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "isVaultSwap": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets no DCA quote if the flag is missing 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets only REGULAR quote because amount is less than 3000 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets only REGULAR quote when DCA quoting is disabled 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets only REGULAR quote when DCA quoting is disabled for an asset 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets only REGULAR quote when DCA quoting is disabled for the dest asset 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets only REGULAR quote when DCA quoting is disabled for the source asset 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > gets the DCA quote to USDC 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0080000000025002",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "8000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
  {
    "dcaParams": {
      "chunkIntervalBlocks": 2,
      "numberOfChunks": 4,
    },
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 168,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 48,
    },
    "estimatedPrice": "100.0080000000025002",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "8000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "DCA",
  },
]
`;

exports[`server > GET /v2/quote > gets the DCA quote with a boost quote and broker fees 1`] = `
[
  {
    "boostQuote": {
      "depositAmount": "100000",
      "destAsset": {
        "asset": "ETH",
        "chain": "Ethereum",
      },
      "egressAmount": "100000000000000000",
      "estimatedBoostFeeBps": 10,
      "estimatedDurationSeconds": 414,
      "estimatedDurationsSeconds": {
        "deposit": 306,
        "egress": 96,
        "swap": 12,
      },
      "estimatedPrice": "100.35122930256698444556",
      "includedFees": [
        {
          "amount": "100",
          "asset": "BTC",
          "chain": "Bitcoin",
          "type": "BOOST",
        },
        {
          "amount": "250",
          "asset": "BTC",
          "chain": "Bitcoin",
          "type": "INGRESS",
        },
        {
          "amount": "100100",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "NETWORK",
        },
        {
          "amount": "1000000",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "BROKER",
        },
        {
          "amount": "8000",
          "asset": "ETH",
          "chain": "Ethereum",
          "type": "EGRESS",
        },
      ],
      "intermediateAmount": "10000000",
      "maxBoostFeeBps": 30,
      "poolInfo": [
        {
          "baseAsset": {
            "asset": "BTC",
            "chain": "Bitcoin",
          },
          "fee": {
            "amount": "0",
            "asset": "BTC",
            "chain": "Bitcoin",
          },
          "quoteAsset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
        },
        {
          "baseAsset": {
            "asset": "ETH",
            "chain": "Ethereum",
          },
          "fee": {
            "amount": "0",
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "quoteAsset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
        },
      ],
      "recommendedLivePriceSlippageTolerancePercent": 1.1,
      "recommendedRetryDurationMinutes": 30,
      "recommendedSlippageTolerancePercent": 1.5,
      "srcAsset": {
        "asset": "BTC",
        "chain": "Bitcoin",
      },
      "type": "REGULAR",
    },
    "depositAmount": "100000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000000000000",
    "estimatedDurationSeconds": 1614,
    "estimatedDurationsSeconds": {
      "deposit": 1506,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.25062656642406015038",
    "includedFees": [
      {
        "amount": "250",
        "asset": "BTC",
        "chain": "Bitcoin",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "1000000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "8000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "intermediateAmount": "10000000",
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "BTC",
          "chain": "Bitcoin",
        },
        "fee": {
          "amount": "0",
          "asset": "BTC",
          "chain": "Bitcoin",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1.1,
    "recommendedRetryDurationMinutes": 30,
    "recommendedSlippageTolerancePercent": 2,
    "srcAsset": {
      "asset": "BTC",
      "chain": "Bitcoin",
    },
    "type": "REGULAR",
  },
  {
    "boostQuote": {
      "dcaParams": {
        "chunkIntervalBlocks": 2,
        "numberOfChunks": 4,
      },
      "depositAmount": "100000",
      "destAsset": {
        "asset": "ETH",
        "chain": "Ethereum",
      },
      "egressAmount": "100000000000000000",
      "estimatedBoostFeeBps": 10,
      "estimatedDurationSeconds": 450,
      "estimatedDurationsSeconds": {
        "deposit": 306,
        "egress": 96,
        "swap": 48,
      },
      "estimatedPrice": "100.35122930256698444556",
      "includedFees": [
        {
          "amount": "100",
          "asset": "BTC",
          "chain": "Bitcoin",
          "type": "BOOST",
        },
        {
          "amount": "250",
          "asset": "BTC",
          "chain": "Bitcoin",
          "type": "INGRESS",
        },
        {
          "amount": "100100",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "NETWORK",
        },
        {
          "amount": "1000000",
          "asset": "USDC",
          "chain": "Ethereum",
          "type": "BROKER",
        },
        {
          "amount": "8000",
          "asset": "ETH",
          "chain": "Ethereum",
          "type": "EGRESS",
        },
      ],
      "intermediateAmount": "10000000",
      "maxBoostFeeBps": 30,
      "poolInfo": [
        {
          "baseAsset": {
            "asset": "BTC",
            "chain": "Bitcoin",
          },
          "fee": {
            "amount": "0",
            "asset": "BTC",
            "chain": "Bitcoin",
          },
          "quoteAsset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
        },
        {
          "baseAsset": {
            "asset": "ETH",
            "chain": "Ethereum",
          },
          "fee": {
            "amount": "0",
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "quoteAsset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
        },
      ],
      "recommendedLivePriceSlippageTolerancePercent": 1.1,
      "recommendedRetryDurationMinutes": 30,
      "recommendedSlippageTolerancePercent": 1.5,
      "srcAsset": {
        "asset": "BTC",
        "chain": "Bitcoin",
      },
      "type": "DCA",
    },
    "dcaParams": {
      "chunkIntervalBlocks": 2,
      "numberOfChunks": 4,
    },
    "depositAmount": "100000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000000000000",
    "estimatedDurationSeconds": 1650,
    "estimatedDurationsSeconds": {
      "deposit": 1506,
      "egress": 96,
      "swap": 48,
    },
    "estimatedPrice": "100.25062656642406015038",
    "includedFees": [
      {
        "amount": "250",
        "asset": "BTC",
        "chain": "Bitcoin",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "1000000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "8000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "intermediateAmount": "10000000",
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "BTC",
          "chain": "Bitcoin",
        },
        "fee": {
          "amount": "0",
          "asset": "BTC",
          "chain": "Bitcoin",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1.1,
    "recommendedRetryDurationMinutes": 30,
    "recommendedSlippageTolerancePercent": 2,
    "srcAsset": {
      "asset": "BTC",
      "chain": "Bitcoin",
    },
    "type": "DCA",
  },
]
`;

exports[`server > GET /v2/quote > gets the quote to USDC 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0000000000025",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > on chain > properly quotes for regular swaps 1`] = `
[
  {
    "depositAmount": "1000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000000",
    "estimatedDurationSeconds": 12,
    "estimatedDurationsSeconds": {
      "swap": 12,
    },
    "estimatedPrice": "1",
    "includedFees": [
      {
        "amount": "0",
        "asset": "SOL",
        "chain": "Solana",
        "type": "INGRESS",
      },
      {
        "amount": "1000000000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "isOnChain": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "USDC",
          "chain": "Solana",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Solana",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 0.5,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 0.5,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Solana",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > on chain > properly quotes with DCA 1`] = `
[
  {
    "dcaParams": {
      "chunkIntervalBlocks": 2,
      "numberOfChunks": 33,
    },
    "depositAmount": "1000000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000000000000",
    "estimatedDurationSeconds": 396,
    "estimatedDurationsSeconds": {
      "swap": 396,
    },
    "estimatedPrice": "100",
    "includedFees": [
      {
        "amount": "0",
        "asset": "BTC",
        "chain": "Bitcoin",
        "type": "INGRESS",
      },
      {
        "amount": "1001000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "intermediateAmount": "100000000",
    "isOnChain": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "BTC",
          "chain": "Bitcoin",
        },
        "fee": {
          "amount": "0",
          "asset": "BTC",
          "chain": "Bitcoin",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 30,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "BTC",
      "chain": "Bitcoin",
    },
    "type": "DCA",
  },
]
`;

exports[`server > GET /v2/quote > on chain > respects the minimum network fee 1`] = `
[
  {
    "depositAmount": "1000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000",
    "estimatedDurationSeconds": 12,
    "estimatedDurationsSeconds": {
      "swap": 12,
    },
    "estimatedPrice": "1",
    "includedFees": [
      {
        "amount": "0",
        "asset": "SOL",
        "chain": "Solana",
        "type": "INGRESS",
      },
      {
        "amount": "500001",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "isOnChain": true,
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "USDC",
          "chain": "Solana",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Solana",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 0.5,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 0.5,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Solana",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > rejects malformed requests 1`] = `
{
  "message": "invalid request",
}
`;

exports[`server > GET /v2/quote > returns DCA quote if regular does not pass totalLiquidity check 1`] = `
[
  {
    "dcaParams": {
      "chunkIntervalBlocks": 2,
      "numberOfChunks": 4,
    },
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 168,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 48,
    },
    "estimatedPrice": "100.0080000000025002",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "8000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "DCA",
  },
]
`;

exports[`server > GET /v2/quote > returns a DCA quote with replenishment 1`] = `
[
  {
    "dcaParams": {
      "chunkIntervalBlocks": 2,
      "numberOfChunks": 4,
    },
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 168,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 48,
    },
    "estimatedPrice": "100.0080000000025002",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "8000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "DCA",
  },
]
`;

exports[`server > GET /v2/quote > returns regular quote if DCA does not pass totalLiquidity check 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "100.0080000000025002",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "8000",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > returns the correct live price slippage tolerance percent for stable asset pair 1`] = `
[
  {
    "depositAmount": "1000000000000000000",
    "destAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "egressAmount": "100000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "0.0000000001",
    "includedFees": [
      {
        "amount": "25000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "USDT",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 0.5,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 0.5,
    "srcAsset": {
      "asset": "USDT",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;

exports[`server > GET /v2/quote > uses 0 as ingress fee when the protocol can't estimate it 1`] = `
[
  {
    "depositAmount": "100000000",
    "destAsset": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "egressAmount": "1000000000000000000",
    "estimatedDurationSeconds": 132,
    "estimatedDurationsSeconds": {
      "deposit": 24,
      "egress": 96,
      "swap": 12,
    },
    "estimatedPrice": "0.01",
    "includedFees": [
      {
        "amount": "0",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "100100",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "0",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "poolInfo": [
      {
        "baseAsset": {
          "asset": "ETH",
          "chain": "Ethereum",
        },
        "fee": {
          "amount": "0",
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
      },
    ],
    "recommendedLivePriceSlippageTolerancePercent": 1,
    "recommendedRetryDurationMinutes": 5,
    "recommendedSlippageTolerancePercent": 1,
    "srcAsset": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
    "type": "REGULAR",
  },
]
`;
